fix the designe of page about

--- a/planets.html
+++ b/planets.html
@@ -71,7 +71,7 @@
       <article class="card planet-card">
         <div class="planet-top">
           <div class="planet-img">
-            <img src="/img/planets/Mercury_in_true_color.jpg" alt="Mercure">
+            <img src="/img/planets/Venus_2_Approach_Image.jpg " alt="Mercure">
           </div>
           <div class="planet-info">
             <h2>Vénus</h2>
@@ -89,7 +89,9 @@
 
       <article class="card planet-card">
         <div class="planet-top">
-          <div class="planet-img g-earth">Terre</div>
+          <div class="planet-img">
+            <img src="/img/planets/The_Blue_Marble,_AS17-148-22727.jpg" alt="Mercure">
+          </div>
           <div class="planet-info">
             <h2>Terre</h2>
             <p class="muted">Notre planète, riche en eau et vie</p>
@@ -106,7 +108,9 @@
 
       <article class="card planet-card">
         <div class="planet-top">
-          <div class="planet-img g-mars">Mars</div>
+          <div class="planet-img">
+            <img src="/img/planets/Mars.png" alt="Mercure">
+          </div>
           <div class="planet-info">
             <h2>Mars</h2>
             <p class="muted">La planète rouge, candidate principale pour l'exploration humaine</p>
@@ -123,7 +127,9 @@
 
       <article class="card planet-card">
         <div class="planet-top">
-          <div class="planet-img g-jupiter">Jupiter</div>
+          <div class="planet-img">
+            <img src="/img/planets/Jupiter.png" alt="Mercure">
+          </div>
           <div class="planet-info">
             <h2>Jupiter</h2>
             <p class="muted">Géante gazeuse, la plus massive du système solaire</p>
@@ -140,7 +146,9 @@
 
       <article class="card planet-card">
         <div class="planet-top">
-          <div class="planet-img g-saturn">Saturne</div>
+          <div class="planet-img">
+            <img src="/img/planets/Saturn_during_Equinox.jpg" alt="Mercure">
+          </div>
           <div class="planet-info">
             <h2>Saturne</h2>
             <p class="muted">Géante gazeuse célèbre pour ses anneaux</p>
@@ -157,7 +165,9 @@
 
       <article class="card planet-card">
         <div class="planet-top">
-          <div class="planet-img g-uranus">Uranus</div>
+          <div class="planet-img">
+            <img src="/img/planets/Uranus_Voyager2_color_calibrated.png" alt="Mercure">
+          </div>
           <div class="planet-info">
             <h2>Uranus</h2>
             <p class="muted">Géante glacée, axe de rotation fortement incliné</p>
@@ -174,7 +184,9 @@
 
       <article class="card planet-card">
         <div class="planet-top">
-          <div class="planet-img g-neptune">Neptune</div>
+          <div class="planet-img">
+            <img src="/img/planets/Neptune_Voyager2_color_calibrated.png" alt="Mercure">
+          </div>
           <div class="planet-info">
             <h2>Neptune</h2>
             <p class="muted">Géante glacée, la plus lointaine des planètes classiques</p>
@@ -192,7 +204,9 @@
       <!-- Planètes naines -->
       <article class="card planet-card">
         <div class="planet-top">
-          <div class="planet-img g-pluto">Pluton</div>
+          <div class="planet-img">
+            <img src="/img/planets/Mercury_in_true_color.jpg" alt="Pluton">
+          </div>
           <div class="planet-info">
             <h2>Pluton</h2>
             <p class="muted">Planète naine de la ceinture de Kuiper</p>
@@ -209,7 +223,9 @@
 
       <article class="card planet-card">
         <div class="planet-top">
-          <div class="planet-img g-eris">Éris</div>
+          <div class="planet-img">
+            <img src="/img/planets/e" alt="Mercure">
+          </div>
           <div class="planet-info">
             <h2>Éris</h2>
             <p class="muted">Planète naine massive de la ceinture de Kuiper</p>
