--- a/about.html
+++ b/about.html
@@ -1,253 +1,109 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us</title>
-    <link rel="stylesheet" href="../style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>À propos - Space Odyssey</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Roboto:wght@400;700&family=Poltawski+Nowy:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="container">
 
-        <header class="header">
-            <div class="header-top">
-                <div class="header-top-left">
-                    <img src="../images/logo-title.png" alt="logo">
-                </div>
-                <div class="header-top-right">
-                    <div>
-                        <input type="search" class="search-input" placeholder="Search ">
-                    </div>
-                    <div class="language-selection">
-                        <select name="language">
-                            <option value="en">English</option>
-                            <option value="fr">Français</option>
-                            <option value="ar">العربية</option>
-                        </select>
-                    </div>
-                    <div class="header-icons">
-                        <div class="test">
-                            <img src="../images/Header Notification button.png" alt="img1">
-                        </div>
-                        <div class="test">
-                            <img src="../images/Profile Icon.png" alt="img1">
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="header-bottom">
-                <div class="social-network">
-                    <div><img src="../images/Social Network.png" alt="s1"></div>
-                    <div><img src="../images/Social Network-1.png" alt="s2"></div>
-                    <div><img src="../images/Social Network-2.png" alt="s3"></div>
-                </div>
-                <div class="header-menu">
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="About.html">About Us</a></li>
-                    <li><a href="Planetes.html">Planétes</a></li>
-                    <li><a href="Missions.html">Missions</a></li>
-                    <li><a href="Conatct.html" class="header-menu-btn">Contact Us</a></li>
-                    <!-- <li><input class="header-menu-btn" type="submit" value="Contact Us"></li> -->
-                </div>
-            </div>
-        </header>
-
-        <section class="content">
-            <div class="about-description">
-                <div class="about-description-img">
-                    <img src="../images/about-description-img.png" alt="about-description-img">
-                </div>
-                <div class="about-description-content">
-                    <div class="description-content-title">
-                        <p>About</p>
-                        <hr>
-                    </div>
-                    <div class="description-content-container">
-                        <div class="description-content-container-grid-1">
-                            <div class="content-container-grid">
-                                <img src="../images/description-content-container.png" alt="description-content-container">
-                            </div>
-                            <div class="content-container-grid">
-                                <p>About AstroTech Studio</p>
-                            </div>
-                        </div>
-                        <div class="description-content-container-grid-2">
-                            <p>AstroTech Studio is a creative team passionate about science and technology. Our goal is to make learning about space fun and inspiring for young explorers. Through interactive platforms and beautiful visuals, we bring the mysteries of the universe closer to everyone.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="team-and-project">
-                <div class="Our-Community">
-                    <div class="Our-Community-grid">
-                        <img src="../images/description-content-container.png" alt="description-content-container">
-                    </div>
-                    <div class="Our-Community-grid">
-                        <p>Our Community</p>
-                    </div>
-                </div>
-                <div class="team-cards">
-                    <div class="team-cards-list">
-                        <div class="team-1-img">
-                            <img src="../images/team-1.png" alt="team-1">
-                        </div>
-                        <div class="team-1-name">
-                            <p>Orion Vega</p>
-                        </div>
-                    </div>
-                    <div class="team-cards-list">
-                        <div class="team-2-img">
-                            <img src="../images/team-2.png" alt="team-1">
-                        </div>
-                        <div class="team-2-name">
-                            <p>Cassius Hale</p>
-                        </div>
-                    </div>
-                    <div class="team-cards-list">
-                        <div class="team-3-img">
-                            <img src="../images/team-3.png" alt="team-1">
-                        </div>
-                        <div class="team-3-name">
-                            <p>Leo Armstrong</p>
-                        </div>
-                    </div>
-                    <div class="team-cards-list">
-                        <div class="team-4-img">
-                            <img src="../images/team-4.png" alt="team-1">
-                        </div>
-                        <div class="team-4-name">
-                            <p>Yasmin tawni</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="Our-Community">
-                    <div class="Our-Community-grid">
-                        <img src="../images/description-content-container.png" alt="description-content-container">
-                    </div>
-                    <div class="Our-Community-grid">
-                        <p>Grow With US</p>
-                    </div>
-                </div>
-
-                <div class="project-cards">
-                    <div class="project-cards-list">
-                        <div class="project-img">
-                            <img src="../images/project-icons.png" alt="project-1">
-                        </div>
-                        <div class="project-img">
-                            <p>Publishing</p>
-                        </div>
-                        <div class="project-description"><p>Share your knowledge and insights through our platform where your voice can inspire and inform others.</p></div>
-                    </div>
-                    <div class="project-cards-list">
-                        <div class="project-img">
-                            <img src="../images/project-icons-1.png" alt="project-1">
-                        </div>
-                        <div class="project-img">
-                            <p>Education</p>
-                        </div>
-                        <div class="project-description"><P>Access learning resources and workshops designed to expand your skills and foster personal growth.</P></div>
-                    </div>
-                    <div class="project-cards-list">
-                        <div class="project-img">
-                            <img src="../images/project-icons-2.png" alt="project-1">
-                        </div>
-                        <div class="project-img">
-                            <p>Career</p>
-                        </div>
-                        <div class="project-description"><P>Take the next step in your career with opportunities for development, mentorship, and professional networking.</P></div>
-                    </div>
-                    <div class="project-cards-list">
-                        <div class="project-img">
-                            <img src="../images/project-icons-3.png" alt="project-1">
-                        </div>
-                        <div class="project-img">
-                            <p>Meeting</p>
-                        </div>
-                        <div class="project-description"><p>Connect and collaborate through interactive events and meetings that drive innovation and community.</p></div>
-                    </div>
-                </div>
-                <div class="Astronomy-Communities">
-                    <div class="Astronomy-Communities-container">
-                        <div class="Astronomy-Communities-items ASI-1">
-                            <h1>Astronomy Communities For Everyone</h1>
-                            <p>Join a vibrant space where astronomy enthusiasts connect, collaborate, and explore the universe together.</p>
-                        </div>
-                        <div class="Astronomy-Communities-items ASI-2">
-                            <div class="ASI-2-content">
-                                <p class="ASI-H1">Members</p>
-                                <p class="ASI-p">5K+</p>
-                            </div>
-                            <div class="ASI-2-content">
-                                <p class="ASI-H1">Projects</p>
-                                <p class="ASI-p">10K+</p>
-                            </div>                            
-                        </div>
-                        <div class="Astronomy-Communities-items ASI-3">
-                            <div class="ASI-3-content">
-                                <p class="ASI-H1">Years of Experience</p>
-                                <p class="ASI-p">12</p>
-                            </div>
-                            <div class="ASI-3-content">
-                                <p class="ASI-H1">Employee</p>
-                                <p class="ASI-p">200</p>
-                            </div>                            
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <footer class="footer">
-            <div class="footer-container">
-                <div class="footer-top">
-                    <div class="footer-cards">
-                        <h3>Legal</h3>
-                        <li><a href="#">Terms of Service</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Cookies</a></li>
-                    </div>
-                    <div class="footer-cards">
-                        <h3>Information</h3>
-                        <li><a href="#">FAQ</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">Support</a></li>
-                    </div>
-                    <div class="footer-cards">
-                        <h3>Company</h3>
-                        <li><a href="#">About us</a></li>
-                        <li><a href="#">Careers</a></li>
-                        <li><a href="#">Contact us</a></li>
-                    </div>
-                    <div class="footer-cards">
-                        <h3>Subscribe</h3>
-                        <input type="email" placeholder="Email Address" class="footer-cards-input">
-                    </div>
-
-                </div>
-                <hr>
-                <div class="footer-bottom">  
-                    <div class="footer-logo">
-                        <img src="../images/logo-title.png" alt="footer-logo">
-                    </div>
-                    <div class="footer-copyrigthing">
-                        <li><a href="#">Terms</a></li>
-                        <li><a href="#">Privacy</a></li>
-                        <li><a href="#">Cookies</a></li>
-                    </div>
-                    <div class="footer-social">
-                        <img src="../images/Social Network.png" alt="social-1">
-                        <img src="../images/Social Network-1.png" alt="social-1">
-                        <img src="../images/Social Network-2.png" alt="social-1">
-                    </div>
-                </div>
-            </div>
-        </footer>
-
+  <!-- NAVBAR (same as other pages) -->
+  <header class="navbar">
+    <div class="navbar-top">
+      <div class="logo">
+        <img src="./img/logo.png" alt="logo">
+      </div>
+      <div class="navbar-right">
+        <input type="text" placeholder="Search..." class="search-bar">
+        <select class="language">
+          <option>Français</option>
+          <option>Anglais</option>
+          <option>Arabe</option>
+        </select>
+        <div class="notification">🔔</div>
+        <img src="https://i.pravatar.cc/40" alt="Profile" class="profile-img">
+      </div>
     </div>
+    <nav class="navbar-bottom">
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="planets.html">Planètes</a></li>
+        <li><a href="missions.html">Missions Spatiales</a></li>
+        <li><a href="about.html">À propos</a></li>
+      </ul>
+      <a class="contact-btn" href="contact.html" aria-label="Contact">Contact Us</a>
+    </nav>
+  </header>
+  <section class="slidr" aria-label="Hero">
+    <div class="slidr-content">
+      <div class="slidr-text">
+        <h1>Space Odyssey</h1>
+        <p>Explore the wonders of the universe. Discover stars, planets, and galaxies like never before!</p>
+      </div>
+      <div class="slidr-actions">
+        <a href="planets.html" class="explore-btn" aria-label="Explore Space">Explore Space</a>
+      </div>
+    </div>
+  </section>
+  <!-- Main content -->
+  <main class="container">
+    <!-- Alternating About Sections (center of page) -->
+    <section class="about-sections container-tight" aria-label="À propos">
+      <!-- Part 1: image right, text left -->
+      <div class="about-row">
+        <div class="about-text">
+          <h2>Qui sommes-nous ?</h2>
+          <p>
+            Nous sommes une équipe passionnée par l'espace et la vulgarisation scientifique. Notre objectif
+            est de rendre l'exploration de l'univers accessible, claire et inspirante.
+          </p>
+        </div>
+        <div class="about-image">
+          <img src="img/unsplash_Q_RBVFFXR_g.png" alt="Illustration équipe">
+        </div>
+      </div>
+
+      <!-- Part 2: image left, text right -->
+      <div class="about-row is-reversed">
+        <div class="about-image">
+          <img src="img/unsplash_crygQ7In_FE.png" alt="Illustration vision">
+        </div>
+        <div class="about-text">
+          <h2>Notre vision</h2>
+          <p>
+            Nous croyons en un futur où la connaissance spatiale est partagée par tous grâce à des
+            expériences interactives et immersives, reliant curiosité et compréhension.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Future Projects Section -->
+    <section class="future-projects container" aria-label="Projets à venir">
+      <div class="future-header">
+        <h2>Projets à venir</h2>
+        <p class="muted">Quelques initiatives en préparation.</p>
+      </div>
+      <div class="grid future-grid">
+        <div class="card future-card">
+          <h3>Atlas Interactif</h3>
+          <p>Une carte dynamique du système solaire avec fiches et visualisations.</p>
+        </div>
+        <div class="card future-card">
+          <h3>Parcours Éducatifs</h3>
+          <p>Des modules gamifiés pour apprendre l'astronomie pas à pas.</p>
+        </div>
+        <div class="card future-card">
+          <h3>Observations en Direct</h3>
+          <p>Des sessions live avec données réelles et experts invités.</p>
+        </div>
+      </div>
+    </section>
+  </main>
+
 </body>
 </html>
