fix a bg in the about page

--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Roboto:wght@400;700&family=Poltawski+Nowy:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body class="page-about">
 
   <!-- NAVBAR (same as other pages) -->
   <header class="navbar">
@@ -51,8 +51,9 @@
   </section>
   <!-- Main content -->
   <main class="container">
-    <!-- Alternating About Sections (center of page) -->
     <section class="about-sections container-tight" aria-label="À propos">
+        <h1>A propos</h1>
+
       <!-- Part 1: image right, text left -->
       <div class="about-row">
         <div class="about-text">
@@ -63,21 +64,21 @@
           </p>
         </div>
         <div class="about-image">
-          <img src="img/unsplash_Q_RBVFFXR_g.png" alt="Illustration équipe">
+            <img src="img/img1.jpg" alt="Illustration équipe">
         </div>
       </div>
-
+      
       <!-- Part 2: image left, text right -->
       <div class="about-row is-reversed">
-        <div class="about-image">
-          <img src="img/unsplash_crygQ7In_FE.png" alt="Illustration vision">
-        </div>
         <div class="about-text">
           <h2>Notre vision</h2>
           <p>
             Nous croyons en un futur où la connaissance spatiale est partagée par tous grâce à des
             expériences interactives et immersives, reliant curiosité et compréhension.
           </p>
+        </div>
+        <div class="about-image">
+          <img src="img/img1.jpg" alt="Illustration vision">
         </div>
       </div>
     </section>
