--- a/planets.html
+++ b/planets.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Planètes du Système Solaire</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Space Odyssey</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Roboto:wght@400;700&family=Poltawski+Nowy:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body class="page-planets">
+
+  <!-- NAVBAR -->
   <header class="navbar">
+    <!-- Section supérieure -->
     <div class="navbar-top">
       <div class="logo">
         <img src="./img/logo.png" alt="logo">
@@ -26,6 +29,7 @@
         <img src="https://i.pravatar.cc/40" alt="Profile" class="profile-img">
       </div>
     </div>
+    <!-- Section inférieure -->
     <nav class="navbar-bottom">
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
@@ -34,18 +38,28 @@
         <li><a href="about.html">À propos</a></li>
       </ul>
       <a class="contact-btn" href="contact.html" aria-label="Contact">Contact Us</a>
-      <!-- <button class="menu-toggle" onclick="this.parentElement.classList.toggle('is-open')" aria-label="menu">Menu</button> -->
     </nav>
   </header>
+  <section class="slidr" aria-label="Hero">
+    <div class="slidr-content">
+      <div class="slidr-text">
+        <h1>Discover the Universe</h1>
+        <p>Explore the wonders of the universe. Discover stars, planets, and galaxies like never before!</p>
+      </div>
+      <div class="slidr-actions">
+        <a href="planets.html" class="explore-btn" aria-label="Explore Space">Explore Space</a>
+      </div>
+    </div>
+  </section>
 
   <div class="container">
-    <header style="display:flex;align-items:center;justify-content:space-between;margin-bottom:20px">
+    <section style="display:flex;align-items:center;justify-content:space-between;margin-bottom:20px">
       <div>
         <h1 class="h1" style="margin:0">Discover the Universe</h1>
         <p class="muted" style="margin:0">Explore the wonders of the universe. 
             Discover stars, planets, and galaxies like never before !</p>
       </div>
-    </header>
+    </section>
 
     <main class="grid planets-grid">
       <article class="card planet-card">
