--- a/about.html
+++ b/about.html
@@ -105,6 +105,55 @@
       </div>
     </section>
   </main>
-
+  <div class="footer">
+    <div class="footer-content">
+      <div class="footer-top">
+        <div class="footer1">
+          <a href="#">Legal</a>
+          <a href="#">Terms of Service</a>
+          <a href="#">Privacy Policy</a>
+          <a href="#">Cookies</a>
+        </div>
+        <div class="footer2">
+          <a href="#">Information</a>
+          <a href="#">FAQ</a>
+          <a href="#">Blog</a>
+          <a href="#">Support</a>
+        </div>
+        <div class="footer3">
+          <a href="#">company</a>
+          <a href="#">About us</a>
+          <a href="#">Careers</a>
+          <a href="#">Contact us</a>
+        </div>
+        <div class="footer4">
+          <form>
+            <label for="subscribe">Subscribe</label>
+            <input type="text" id="subscribe" placeholder="Email adress" />
+          </form>
+        </div>
+      </div>
+      <div class="footer-bottom">
+        <div class="logo">
+          <img src="img/logo.png" alt="logo" />
+        </div>
+        <div class="footer-bottom-links">
+          <ul>
+            <li><a href="#">Terms</a></li>
+            <li><a href="#">Privacy</a></li>
+            <li><a href="#">Cookies</a></li>
+          </ul>
+        </div>
+        <div class="social-links">
+          <div class="social-links" style="background-color: black">
+            <a href="https://www.instagram.com/nasa/?hl=en" target="_blank"><img src="img/Social Network.png" alt="instagram" /></a>
+            <a href="https://www.facebook.com/NASA/" target="_blank"><img src="img/Social Network-1.png" alt="facebook" /></a>
+            <a href="https://x.com/NASA" target="_blank"><img src="img/Social Network-2.png" alt="twitter" /></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- FOOTER -->
 </body>
 </html>
