--- a/index.html
+++ b/index.html
@@ -51,6 +51,73 @@
       </div>
     </div>
   </section>
+
+  <!-- MAIN CONTENT --><section class="content">
+            <div class="slider">
+              <h1>Space Odyssey</h1>
+              <p>      Explore the wonders of the universe. <br>
+Discover stars, planets, and galaxies like never before !</p>
+              <br>
+              <input class="slider-btn" type="submit" value="Explore Space">
+          </div>
+          <div class="Discover-cards">
+              <div class="cards card-1">
+                  <h1><b>Discover the Universe</b></h1>
+                  <p>Get a glimpse into the wonders of the cosmos with our curated content on astronomical discoveries, celestial events, and fascinating space facts. Start your journey into the mysteries of the universe right here.</p>
+                  <button class="cards-btn" value="Learn More"><b>Learn More</b></button>
+              </div>
+              <div class="cards card-2">
+                  <h1><b>Updated on Space News</b></h1>
+                  <p>Keep up with the latest news in the world of space and astronomy. From recent discoveries to upcoming celestial events, stay informed with the most current updates and highlights.</p>
+                  <button class="cards-btn" value="Learn More"><b>Learn More</b></button>
+              </div>
+              <div class="cards card-3">
+                  <h1><b>Learn from Experts</b></h1>
+                  <p>Gain insights from astronomy experts with our informative articles, and guides. Whether you're a beginner or an enthusiast, expand your knowledge with easy-to-understand resources tailored for all levels.</p>
+                  <button class="cards-btn" value="Learn More"><b>Learn More</b></button>
+              </div>
+          </div>
+          <div class="Discover-content">
+              <div class="Discover-content-description">
+                  <p>Dive into the fascinating world of astronomy with our curated content, expert insights, and the latest space news. Whether you're a curious learner or a seasoned enthusiast, explore our resources to deepen your understanding of the cosmos and stay connected with the ever-expanding universe.</p>
+              </div>
+              <div class="Discover-content-time-card">
+                  <div class="time-card-title">
+                      <img src="images/Discover-time-card.png" alt="Discover-time">
+                  </div>
+                  <div class="time-card-t">
+                      <p>352D 5H 49M 20S</p>
+                  </div>
+              </div>
+          </div>
+          <div class="Astronomy">
+              <div class="Astronomy-img"></div>
+              <div class="Astronomy-content">
+                  <h1><b>What is Astronomy?</b></h1>
+                  <p>Astronomy is the scientific study of celestial objects like stars, planets, galaxies, and phenomena that occur outside Earth's atmosphere. It explores the universe’s origins, structure, and evolution, using observation, theoretical models, and advanced technologies to understand cosmic events and the physical laws governing the cosmos.</p>
+                  <button class="cards-btn" value="Learn More"><b>Learn More</b></button>
+              </div>
+          </div>
+          <div class="journale">
+              <div class="journale-content">
+                  <h1>Image Of The Day</h1>
+                  <h2><u>Earth’s Crest Over the Lunar Horizon</u></h2>
+                  <p>This view of the Earth’s crest over the lunar horizon was taken on July 29, 1971, during the Apollo 15 lunar landing mission. Astronauts David Scott, Alfred Worden, and James Irwin launched from NASA’s Kennedy Space Center in Florida aboard a Saturn V launch vehicle.
+                      <br><br>
+                  Designed to explore the Moon over longer periods, greater ranges, and with more instruments for the collection of scientific data than before, Apollo 15 included the introduction of a $40 million lunar roving vehicle (LRV) that reached a top speed of 10 mph (16 kph) across the Moon’s surface.
+                  <br><br>
+                  Image Credit: NASA</p>
+                  <button class="cards-btn" value="Learn More"><b>Read More ></b></button>
+              </div>
+              <div class="journale-img">
+                  <div><img src="images/journale-img.png" alt="journale"></div>
+                  <div class="img-dots">
+                      <p>View Images</p>
+                      <img src="images/ArroW.png" alt="ArroW">
+                  </div>
+              </div>
+          </div>
+      </section>
   <!-- FOOTER -->
    <div class="footer">
     <div class="footer-content">
