fix the style in home page

--- a/about.html
+++ b/about.html
@@ -104,6 +104,32 @@
         </div>
       </div>
     </section>
+
+    <!-- Our Community / Grow With Us Cards -->
+    <section class="container">
+      <div class="future-header">
+        <h2>Our Community</h2>
+        <p class="muted">Grow With Us</p>
+      </div>
+      <div class="grid future-grid">
+        <article class="card future-card">
+          <h3>Publishing</h3>
+          <p>Share your knowledge and insights through our platform, where your voice can inspire and inform others.</p>
+        </article>
+        <article class="card future-card">
+          <h3>Education</h3>
+          <p>Access learning resources and workshops designed to expand your skills and foster personal growth.</p>
+        </article>
+        <article class="card future-card">
+          <h3>Career</h3>
+          <p>Take the next step in your career with opportunities for development, mentorship, and professional networking.</p>
+        </article>
+        <article class="card future-card">
+          <h3>Meeting</h3>
+          <p>Connect and collaborate through interactive events and meetings that drive innovation and community.</p>
+        </article>
+      </div>
+    </section>
   </main>
   <div class="footer">
     <div class="footer-content">
