--- a/index.html
+++ b/index.html
@@ -52,14 +52,8 @@
     </div>
   </section>
 
-  <!-- MAIN CONTENT --><section class="content">
-            <div class="slider">
-              <h1>Space Odyssey</h1>
-              <p>      Explore the wonders of the universe. <br>
-Discover stars, planets, and galaxies like never before !</p>
-              <br>
-              <input class="slider-btn" type="submit" value="Explore Space">
-          </div>
+  <!-- MAIN CONTENT -->
+      <section class="content">
           <div class="Discover-cards">
               <div class="cards card-1">
                   <h1><b>Discover the Universe</b></h1>
