--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
   <section class="content">
     <div class="contact-description">
         <div class="contact-description-img-parent">
-            <img src="./img/contact-img.png" alt="contact-img">
+            <img src="img/Frame 239197.png" alt="contact-hero">
                 <div class="contact-description-img-child">
                     <div class="contact-description-img CDI-title">
                         <p id="CDI-title-h1">Contact US</p>
@@ -52,18 +52,18 @@
                     </div>
                     <div class="contact-description-img CDI-middle">
                         <div class="CDI-middle-number">
-                            <img src="../images/bxs_phone-call.png" alt="phone">
+                            <img src="img/Social Network-2.png" alt="phone icon">
                             <p> +1012 3456 789</p>
                         </div>
                         <div class="CDI-middle-email">
-                            <img src="../images/ic_sharp-email.png" alt="email">
+                            <img src="img/Social Network.png" alt="email icon">
                             <p> demo@gmail.com</p>
                         </div>
                     </div>
                     <div class="contact-description-img CDI-social">
-                        <img src="../images/Social Network.png" alt="s1">
-                        <img src="../images/Social Network-1.png" alt="s2">
-                        <img src="../images/Social Network-2.png" alt="s3">
+                        <img src="img/Social Network.png" alt="s1">
+                        <img src="img/Social Network-1.png" alt="s2">
+                        <img src="img/Social Network-2.png" alt="s3">
                     </div>
                 </div>
         </div>
@@ -131,7 +131,7 @@
     <div class="contact-cards">
         <div class="contact-cards-list">
             <div class="contact-img">
-                <img src="../images/email_2099199 1.png" alt="contact-1">
+                <img src="img/Frame 11.png" alt="email icon">
             </div>
             <div class="contact-text">
                 <p>Email</p>
@@ -140,7 +140,7 @@
         </div>
         <div class="contact-cards-list">
             <div class="contact-img">
-                <img src="../images/chat_10547720 1.png" alt="contact-1">
+                <img src="img/Rectangle 503.png" alt="chat icon">
             </div>
             <div class="contact-text">
                 <p>Live Chat</p>
@@ -152,7 +152,7 @@
         </div>
         <div class="contact-cards-list">
             <div class="contact-img">
-                <img src="../images/phone-call_455705 1.png" alt="contact-1">
+                <img src="img/Rectangle 554.png" alt="phone icon">
             </div>
             <div class="contact-text">
                 <p>Phone</p>
