--- a/index.html
+++ b/index.html
@@ -104,11 +104,7 @@
                   <button class="cards-btn" value="Learn More"><b>Read More ></b></button>
               </div>
               <div class="journale-img">
-                  <div><img src="images/journale-img.png" alt="journale"></div>
-                  <div class="img-dots">
-                      <p>View Images</p>
-                      <img src="images/ArroW.png" alt="ArroW">
-                  </div>
+                  <div><img src="/img/Frame 239197.png" alt="journale"></div>
               </div>
           </div>
       </section>
