fix the Community section in page about

--- a/about.html
+++ b/about.html
@@ -93,14 +93,17 @@
         <div class="card future-card">
           <h3>Atlas Interactif</h3>
           <p>Une carte dynamique du système solaire avec fiches et visualisations.</p>
+          <button class="cards-btn" value="Learn More"><b>Learn More</b></button>
         </div>
         <div class="card future-card">
           <h3>Parcours Éducatifs</h3>
           <p>Des modules gamifiés pour apprendre l'astronomie pas à pas.</p>
+        <button class="cards-btn" value="Learn More"><b>Learn More</b></button>
         </div>
         <div class="card future-card">
           <h3>Observations en Direct</h3>
           <p>Des sessions live avec données réelles et experts invités.</p>
+        <button class="cards-btn" value="Learn More"><b>Learn More</b></button>
         </div>
       </div>
     </section>
@@ -111,25 +114,26 @@
         <h2>Our Community</h2>
         <p class="muted">Grow With Us</p>
       </div>
-      <div class="grid future-grid">
-        <article class="card future-card">
-          <h3>Publishing</h3>
-          <p>Share your knowledge and insights through our platform, where your voice can inspire and inform others.</p>
+      <div class="community">
+        <article class="card-comunoty">
+            <img src="/img/person1.png" alt="">
+            <h3>Orion Vega</h3>
         </article>
-        <article class="card future-card">
-          <h3>Education</h3>
-          <p>Access learning resources and workshops designed to expand your skills and foster personal growth.</p>
+        <article class="card-comunoty">
+            <img src="/img/person2.png" alt="">
+            <h3>Cassius Hale</h3>
         </article>
-        <article class="card future-card">
-          <h3>Career</h3>
-          <p>Take the next step in your career with opportunities for development, mentorship, and professional networking.</p>
+        <article class="card-comunoty">
+            <img src="/img/person3.png" alt="">
+            <h3>Lyra Andromeda</h3>
         </article>
-        <article class="card future-card">
-          <h3>Meeting</h3>
-          <p>Connect and collaborate through interactive events and meetings that drive innovation and community.</p>
+        <article class="card-comunoty">
+            <img src="/img/person4.png" alt="">
+            <h3>Leo Armstrong</h3>
         </article>
       </div>
     </section>
+
   </main>
   <div class="footer">
     <div class="footer-content">
