fix party of our mission and our story in page about

--- a/about.html
+++ b/about.html
@@ -57,10 +57,13 @@
       <!-- Part 1: image right, text left -->
       <div class="about-row">
         <div class="about-text">
-          <h2>Qui sommes-nous ?</h2>
+          <h2>Our Mission</h2>
           <p>
-            Nous sommes une équipe passionnée par l'espace et la vulgarisation scientifique. Notre objectif
-            est de rendre l'exploration de l'univers accessible, claire et inspirante.
+            This view of the Earth’s crest over the lunar horizon was taken on July 29, 1971, during the Apollo 15 lunar landing mission. Astronauts David Scott, Alfred Worden, and James Irwin launched from NASA’s Kennedy Space Center in Florida aboard a Saturn V launch vehicle.
+
+            Designed to explore the Moon over longer periods, greater ranges, and with more instruments for the collection of scientific data than before, Apollo 15 included the introduction of a $40 million lunar roving vehicle (LRV) that reached a top speed of 10 mph (16 kph) across the Moon’s surface.
+
+            Image Credit: NASA
           </p>
         </div>
         <div class="about-image">
@@ -71,10 +74,13 @@
       <!-- Part 2: image left, text right -->
       <div class="about-row is-reversed">
         <div class="about-text">
-          <h2>Notre vision</h2>
+          <h2>Our Story</h2>
           <p>
-            Nous croyons en un futur où la connaissance spatiale est partagée par tous grâce à des
-            expériences interactives et immersives, reliant curiosité et compréhension.
+            This view of the Earth’s crest over the lunar horizon was taken on July 29, 1971, during the Apollo 15 lunar landing mission. Astronauts David Scott, Alfred Worden, and James Irwin launched from NASA’s Kennedy Space Center in Florida aboard a Saturn V launch vehicle.
+
+                Designed to explore the Moon over longer periods, greater ranges, and with more instruments for the collection of scientific data than before, Apollo 15 included the introduction of a $40 million lunar roving vehicle (LRV) that reached a top speed of 10 mph (16 kph) across the Moon’s surface.
+
+                Image Credit: NASA
           </p>
         </div>
         <div class="about-image">
