--- a/planets.html
+++ b/planets.html
@@ -8,6 +8,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Roboto:wght@400;700&family=Poltawski+Nowy:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/components/nav.css">
+  <link rel="stylesheet" href="css/components/footer.css">
+  <link rel="stylesheet" href="css/planet.css">
 </head>
 <body class="page-planets">
 
@@ -53,10 +56,10 @@
   </section>
 
   <div class="container">
-    <section style="display:flex;align-items:center;justify-content:space-between;margin-bottom:20px">
+    <section class="planets-header">
       <div>
-        <h1 class="h1" style="margin:0">Discover the Universe</h1>
-        <p class="muted" style="margin:0">Explore the wonders of the universe. 
+        <h1 class="h1">Discover the Universe</h1>
+        <p class="muted">Explore the wonders of the universe. 
             Discover stars, planets, and galaxies like never before !</p>
       </div>
     </section>
@@ -306,7 +309,7 @@
       </article>
 
     </main>
-    <footer class="muted" style="font-size:0.95rem;margin-top:18px">Astuce : remplacez les cercles colorés par de vraies images en changeant <code>.planet-img</code> en &lt;img src="..."&gt; dans chaque fiche si vous préférez des photos.</footer>
+    <footer class="muted planets-note">Astuce : remplacez les cercles colorés par de vraies images en changeant <code>.planet-img</code> en &lt;img src="..."&gt; dans chaque fiche si vous préférez des photos.</footer>
   </div>
     <div class="footer">
       <div class="footer-content">
