--- a/contact.html
+++ b/contact.html
@@ -8,6 +8,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Roboto:wght@400;700&family=Poltawski+Nowy:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/components/nav.css">
+  <link rel="stylesheet" href="css/components/footer.css">
+  <link rel="stylesheet" href="css/contact.css">
 </head>
 <body class="page-contact">
 
@@ -69,55 +72,34 @@
         </div>
         <div class="contact-description-content">
                 <div class="content-form">
-                    <form action="POST">
+                    <form method="post" action="#">
                         <div class="form-container">
                             <div class="form-container-left">
                                 <div class="container-input">
                                     <label for="first-name">First Name :</label>
-                                    <input type="text" id="first-name" class="input" >
+                                    <input type="text" id="first-name" name="firstName" class="input" placeholder="Enter your first name" required>
                                 </div>
                                 <br><br>
                                 <div class="container-input">
-                                    <label for="first-name">Email :</label>
-                                    <input type="email" id="first-name" class="input">
+                                    <label for="email">Email :</label>
+                                    <input type="email" id="email" name="email" class="input" placeholder="Enter your email" required>
                                 </div>
                             </div>
                             <div class="form-container-right">
                                 <div class="container-input">
-                                    <label for="first-name">Last Name :</label>
-                                    <input type="text" id="first-name" class="input">
+                                    <label for="last-name">Last Name :</label>
+                                    <input type="text" id="last-name" name="lastName" class="input" placeholder="Enter your last name" required>
                                 </div>
                                 <br><br>
                                 <div class="container-input">
-                                    <label for="first-name">Phone Number :</label>
-                                    <input type="tel" id="first-name" class="input">
+                                    <label for="phone-number">Phone Number :</label>
+                                    <input type="tel" id="phone-number" name="phoneNumber" class="input" placeholder="Enter your phone number" required>
                                 </div>
                             </div>
                             <div class="form-container-bottom">
-                                
-                                <div class="container-radio">
-                                    <div class="container-radio-title">
-                                        <label for="first-name" >Select Subject?</label>
-                                    </div>
-                                    <div class="radio-btn">
-                                        <div>
-                                            <input type="radio" name="Select-Subject" class="radio"><label for="Select-Subject">General Inquiry</label>
-                                        </div>
-                                        <div>
-                                            <input type="radio" name="Select-Subject" class="radio"><label for="Select-Subject">General Inquiry</label>
-                                        </div>
-                                        <div>
-                                            <input type="radio" name="Select-Subject" class="radio"><label for="Select-Subject">General Inquiry</label>
-                                        </div>
-                                        <div>
-                                            <input type="radio" name="Select-Subject" class="radio"><label for="Select-Subject">General Inquiry</label>
-                                        </div>
-                                    </div>
-                                </div>
                                 <div class="container-input">
-                                    <label for="first-name">Message :</label>
-                                    <p>Write your message..</p>
-                                    <input type="text" id="first-name" class="input" >
+                                    <label for="message">Message :</label>
+                                    <textarea id="message" name="message" class="input" rows="4" placeholder="Write your message..." required></textarea>
                                 </div>
                             </div>
                             <div class="container-botton">
