fix the structer of project and the json

--- a/html/about.html
+++ b/html/about.html
@@ -7,10 +7,10 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Roboto:wght@400;700&family=Poltawski+Nowy:wght@400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/components/nav.css">
-  <link rel="stylesheet" href="css/components/footer.css">
-  <link rel="stylesheet" href="css/about.css">
+  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/components/nav.css">
+  <link rel="stylesheet" href="/css/components/footer.css">
+  <link rel="stylesheet" href="/css/about.css">
 </head>
 <body class="page-about">
 
@@ -18,7 +18,7 @@
   <header class="navbar">
     <div class="navbar-top">
       <div class="logo">
-        <img src="./img/logo.png" alt="logo">
+        <img src="/img/logo.png" alt="logo">
       </div>
       <div class="navbar-right">
         <input type="text" placeholder="Search..." class="search-bar">
@@ -33,7 +33,7 @@
     </div>
     <nav class="navbar-bottom">
       <ul class="nav-links">
-        <li><a href="index.html">Home</a></li>
+        <li><a href="/index.html">Home</a></li>
         <li><a href="planets.html">Planètes</a></li>
         <li><a href="missions.html">Missions Spatiales</a></li>
         <li><a href="about.html">À propos</a></li>
@@ -70,7 +70,7 @@
           </p>
         </div>
         <div class="about-image">
-            <img src="img/img1.jpg" alt="Illustration équipe">
+            <img src="/img/img1.jpg" alt="Illustration équipe">
         </div>
       </div>
       
@@ -87,7 +87,7 @@
           </p>
         </div>
         <div class="about-image">
-          <img src="img/img1.jpg" alt="Illustration vision">
+          <img src="/img/img1.jpg" alt="Illustration vision">
         </div>
       </div>
     </section>
@@ -174,7 +174,7 @@
       </div>
       <div class="footer-bottom">
         <div class="logo">
-          <img src="img/logo.png" alt="logo" />
+          <img src="/img/logo.png" alt="logo" />
         </div>
         <div class="footer-bottom-links">
           <ul>
@@ -185,9 +185,9 @@
         </div>
         <div class="social-links">
           <div class="social-links" style="background-color: black">
-            <a href="https://www.instagram.com/nasa/?hl=en" target="_blank"><img src="img/Social Network.png" alt="instagram" /></a>
-            <a href="https://www.facebook.com/NASA/" target="_blank"><img src="img/Social Network-1.png" alt="facebook" /></a>
-            <a href="https://x.com/NASA" target="_blank"><img src="img/Social Network-2.png" alt="twitter" /></a>
+            <a href="https://www.instagram.com/nasa/?hl=en" target="_blank"><img src="/img/Social Network.png" alt="instagram" /></a>
+            <a href="https://www.facebook.com/NASA/" target="_blank"><img src="/img/Social Network-1.png" alt="facebook" /></a>
+            <a href="https://x.com/NASA" target="_blank"><img src="/img/Social Network-2.png" alt="twitter" /></a>
           </div>
         </div>
       </div>
